# LatestDocsMCP

./: README.md  index.js  rust_syntax_I_Know.txt
.cursor/rules/: syntax-caution-and-migrations.mdc
OLDJS/: README.md  index.js  package.json
OLDJS/OtherLangs/: SVELTEllms-full.txt  TAURIllms.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: index.html  test-rpc.html
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  rpc.rs  search.rs
