[package]
name = "mcp-docs-server-core"
version = "0.1.0"
description = "MCP Documentation Server"
authors = ["Chamath Thiwanka"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"
log = "0.4"

# Web Server & RPC
axum = "0.7"
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.25", features = ["server", "client", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# State Management
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Search Engine
tantivy = "0.24"
lazy_static = "1.4.0"
tempfile = "3.10.1"
